# keyboard_map_shift

./: Cargo.toml  LICENSE  README.md  tatus
.github/workflows/: release.yml
docs/: shortcuts.md
src/: hotkey_windows.rs  lib.rs  main.rs  test_utils.rs
src/cli/: mod.rs  tests.rs  wizard.rs
src/config/: io.rs  mod.rs  model.rs  paths.rs
src/config/model/: tests.rs
src/config/paths/: tests.rs
src/get_highlighted/: fallback.rs  linux.rs  mod.rs  windows.rs
src/get_highlighted/linux/: tests.rs
src/get_highlighted/windows/: tests.rs
src/hotkey/: mod.rs  tests.rs
src/keyboard_mapping/: fallback.rs  keyboard_mapping.rs  linux.rs  mod.rs  remap.rs  types.rs  windows.rs
src/keyboard_mapping/windows/: tests.rs
src/platform/: constants.rs  mod.rs
src/platform/constants/: tests.rs
src/platform/linux/: gnome.rs  kde.rs  mod.rs  tests.rs
src/platform/linux/gnome/: tests.rs
src/platform/linux/kde/: tests.rs
src/platform/windows/: mod.rs  tests.rs
