[package]
name = "keyboard_map_shift"
version = "0.1.0"
edition = "2024"

[dependencies]
unicode-bidi = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Globalization",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }
clap = { version = "4.5.4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
xkbcommon = "0.9.0"
quick-xml = {version = "0.38.3", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
